@@ -1,5 +1,9 @@
 2014-03-06  Ian Dunn  <dunni@gnu.org>
 
+	* process.c (get_quant_var): Gets a quantifier variable.
+	(check_quants): Implements get_quant_var to check the
+	quantifier variables.
+
 	* typedef.h (CHECK_ALLOC): Enclosed object in parentheses.
 
 	* sentence.c (sentence_text_changed): Don't add any undo
